cleaned up css text and fixed bug with buttons and collapse accordion

--- a/source/css/scss/base/_links.scss
+++ b/source/css/scss/base/_links.scss
@@ -1,6 +1,4 @@
 /* Links in text */
-
-
 a {
 	color: $blue-dark;
 	border-bottom: 1px solid $blue-dark;
@@ -134,5 +132,41 @@ a.no-decoration {
     vertical-align: middle;
     font-size: 22px;
     margin-top: -4px;
+  }
+}
+
+
+
+/* Telephone Link */
+.a-tel {
+  font-family: 'DIN-bold';
+  border-bottom: none;
+  font-size: 18px;
+  position: relative;
+
+  &:hover {
+    border: none;
+  }
+
+  &:focus:not(.override-focus) {
+    box-shadow: none;
+    border:none;
+  }
+
+  &:before {
+    content: "";
+    width: calc(100% + 40px);
+    min-height: 48px;
+    position: absolute;
+    left: -20px;
+    top: -15px;
+    cursor: pointer;
+    z-index: -1;
+  }
+
+  i {
+    vertical-align: middle;
+    margin-left: -5px;
+    margin-top: -3px;
   }
 }
