--- a/source/css/scss/base/_text.scss
+++ b/source/css/scss/base/_text.scss
@@ -15,22 +15,6 @@
     src: url('http://www.persille.no/DINWeb-Bold.php');
 }
 
-.din-reg {
-    font-family: 'DIN-reg';
-}
-.din-light {
-    font-family: 'DIN-light';
-}
-.din-medium {
-    font-family: 'DIN-medium';
-}
-.din-bold,
-.a-textSizeBold,
-b,
-strong {
-    font-family: 'DIN-bold';
-}
-
 h1,
 .a-pageTitle,
 .a-textSize1   {
@@ -143,6 +127,22 @@ h4,
     }
 }
 
+// Font weights
+.din-reg {
+    font-family: 'DIN-reg';
+}
+.din-light {
+    font-family: 'DIN-light';
+}
+.din-medium {
+    font-family: 'DIN-medium';
+}
+.din-bold,
+.a-textSizeBold,
+b,
+strong {
+    font-family: 'DIN-bold';
+}
 
 
 /* Text-Related Elements */
@@ -239,7 +239,6 @@ blockquote:before, blockquote:after {
 
 
 // Label
-
 .a-label {
     vertical-align: top;
     font-family: 'DIN-reg';
@@ -262,40 +261,4 @@ blockquote:before, blockquote:after {
     border: none;
     margin-top: -3px;
     color: #000;
-}
-
-
-/* Telephone */
-
-.a-tel {
-  font-family: 'DIN-bold';
-  border-bottom: none;
-  font-size: 18px;
-  position: relative;
-
-  &:hover {
-    border: none;
-  }
-
-  &:focus:not(.override-focus) {
-    box-shadow: none;
-    border:none;
-  }
-
-  &:before {
-    content: "";
-    width: calc(100% + 40px);
-    min-height: 48px;
-    position: absolute;
-    left: -20px;
-    top: -11px;
-    cursor: pointer;
-    z-index: -1;
-  }
-
-  i {
-    vertical-align: middle;
-    margin-left: -5px;
-    margin-top: -3px;
-  }
 }
