--- a/source/css/scss/objects/_collapse.scss
+++ b/source/css/scss/objects/_collapse.scss
@@ -187,15 +187,17 @@
 }
 
 .a-collapseContent{
-  padding-left: 48px;
-  padding-right: 48px;
-  @media all and (min-width: $bp-med) {
-    padding-left: calc(48px *2);
-    padding-right: calc(48px *2);
-  }
 
   .a-collapseContent-inside {
     padding-bottom: 36px;
+
+    padding-left: 48px;
+    padding-right: 48px;
+
+    @media all and (min-width: $bp-med) {
+      padding-left: calc(48px *2);
+      padding-right: calc(48px *2);
+    }
   }
   .a-collapseContent-img {
     margin-top: -36px;
@@ -277,7 +279,6 @@
   padding-bottom: 3px;
   display: inline-block;
   box-shadow: none !important;
-  display: block;
 
   &:focus:not(.override-focus) {
     .a-dropdownArrow {
